modified to VITE js

--- a/index.html
+++ b/index.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>ChatsApp</title>
     <meta charset="utf-8" />
     <link rel="icon" href="chat.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta
       name="description"
       content="A Chat app built with React, Node Js, Express and Socket.io"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
-    <title>ChatsApp</title>
   </head>
   <body>
+    <script type="module" src="/src/index.jsx"></script>
     <div id="root"></div>
   </body>
 </html>
